The menu close option visibility fixed for 480px screen

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -109,6 +109,7 @@
         font-size: 16px;
         gap: 10px;
         padding: 10px 0;
+        padding-top: 50px;
     }
     .nav-menu li {
         font-size: 18px;
@@ -119,7 +120,7 @@
         right: 10px;
     }
     .nav-mob-close {
-        left: 90vw;
+        left: 230px;
         width: 24px;
     }
     .navbar-logo {
